fix: don't purge svh

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro'
 ---
 
 <BaseLayout>
-  <main class="text-xl font-mono w-full h-[100svh] grid place-items-center">
+  <main class="text-xl font-mono w-full h-svh grid place-items-center">
     <ol class="list-decimal">
       <li>
         <a href="/voxel-ish">Voxel-Ish</a>
