feat: rebrand as crafts

--- a/src/components/Fonts.astro
+++ b/src/components/Fonts.astro
@@ -1,17 +1,21 @@
 ---
 import '@fontsource/geist/400.css'
 import '@fontsource/geist/800.css'
+import '@fontsource-variable/source-serif-4'
 import '@fontsource/monaspace-neon/500.css'
 import '@fontsource/monaspace-neon/700.css'
 import '../styles/font-fallbacks.css'
 
 import geistLatin400Normal from '@fontsource/geist/files/geist-latin-400-normal.woff2?url'
 import geistLatin800Normal from '@fontsource/geist/files/geist-latin-800-normal.woff2?url'
+import sourceSerif4Normal from '@fontsource-variable/source-serif-4/files/source-serif-4-latin-wght-normal.woff2?url'
 import monaspaceNeonLatin500Normal from '@fontsource/monaspace-neon/files/monaspace-neon-latin-500-normal.woff2?url'
 import monaspaceNeonLatin700Normal from '@fontsource/monaspace-neon/files/monaspace-neon-latin-700-normal.woff2?url'
+
 const preloadFonts = [
   geistLatin400Normal,
   geistLatin800Normal,
+  sourceSerif4Normal,
   monaspaceNeonLatin500Normal,
   monaspaceNeonLatin700Normal,
 ]
