--- a/src/pages/rapier-text.astro
+++ b/src/pages/rapier-text.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
-import App from '../experiments/RapierText'
+import App from '../crafts/RapierText'
 ---
 
 <BaseLayout
