--- a/src/styles/font-fallbacks.css
+++ b/src/styles/font-fallbacks.css
@@ -6,3 +6,12 @@
   line-gap-override: 0.00%;
   size-adjust: 104.76%;
 }
+
+@font-face {
+  font-family: "Source Serif 4 Fallback";
+  src: local("Times New Roman");
+  ascent-override: 87.87%;
+  descent-override: 28.41%;
+  line-gap-override: 0%;
+  size-adjust: 117.91%;
+}
