--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,10 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
+import List from '../crafts/List.md'
 ---
 
 <BaseLayout>
-  <main class="text-xl font-mono w-full h-svh grid place-items-center">
-    <ol class="list-decimal">
-      <li>
-        <a href="/voxel-ish">Voxel-Ish</a>
-      </li>
-      <li>
-        <a href="/rapier-text">Rapier-Text</a>
-      </li>
-    </ol>
+  <main class="prose text-xl font-mono w-full h-svh grid place-items-center">
+    <List />
   </main>
 </BaseLayout>
