--- a/src/pages/voxel-ish.astro
+++ b/src/pages/voxel-ish.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro'
-import App from '../experiments/VoxelIsh'
+import App from '../crafts/VoxelIsh'
 ---
 
 <BaseLayout
