--- a/src/pages/voxel-ish.astro
+++ b/src/pages/voxel-ish.astro
@@ -9,7 +9,7 @@ import App from '../crafts/VoxelIsh'
   title="Voxel-ish"
   description="Collidable 3D voxels generated from images"
 >
-  <main class="w-full h-screen bg-white">
-    <App client:load transition:persist />
+  <main class="w-full h-svh bg-gray-1">
+    <App client:load />
   </main>
 </BaseLayout>
