--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,7 +26,7 @@ const {class: className, ignoreTheme = false, ...meta} = Astro.props
     <MetaTags {...meta} />
     <slot name="head" />
   </head>
-  <body class="antialiased">
+  <body class="antialiased max-h-[100svh] overflow-hidden bg-gray-1">
     <slot />
   </body>
 </html>
