--- a/src/pages/rapier-text.astro
+++ b/src/pages/rapier-text.astro
@@ -9,13 +9,15 @@ import App from '../crafts/RapierText'
   title="Rapier Text"
   description="Collidable metallic 3D text blocks"
 >
-  <main class="w-full h-screen bg-black">
-    <App client:load transition:persist />
+  <main class="w-full h-svh bg-gray-1">
+    <App client:load />
   </main>
 
   <!-- Here because @react-three/drei's Html doesn't work with Orthographic camera. -->
-  <div class="absolute left-0 bottom-0 font-mono right-0 text-gray-12 w-full">
-    <div class="max-w-full ml-10 mb-10 text-lg flex flex-col items-start select-none">
+  <div class="absolute left-0 bottom-0 font-mono right-0 text-gray-12 w-fit">
+    <div
+      class="max-w-full w-content pl-5 sm:pl-10 pb-5 sm:pb-10 text-lg flex flex-col items-start select-none"
+    >
       <h1 class="text-4xl font-bold">Rapier-Text</h1>
       <p class="mt-1 text-gray-11">
         Inspired by <a href="https://deeo.studio">DEEO</a>. Drag around.
